[gd_scene load_steps=4 format=3 uid="uid://ba2crbk4wyiji"]

[ext_resource type="Texture2D" uid="uid://dtpw4cwodwlo5" path="res://buildingBackground.png" id="1_tbikc"]
[ext_resource type="Script" path="res://building.gd" id="2_58lg4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pnhe"]

[node name="building" type="Sprite2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_tbikc")
script = ExtResource("2_58lg4")

[node name="Spot1" type="Area2D" parent="."]
position = Vector2(-212, 26)
scale = Vector2(3, 3)

[node name="Spot1Collider" type="CollisionShape2D" parent="Spot1"]
shape = SubResource("RectangleShape2D_2pnhe")

[node name="Sprite2D" type="Sprite2D" parent="Spot1"]
scale = Vector2(0.33, 0.33)

[node name="Spot2" type="Area2D" parent="."]
position = Vector2(-90, 26)
scale = Vector2(3, 3)

[node name="Spot2Collider" type="CollisionShape2D" parent="Spot2"]
shape = SubResource("RectangleShape2D_2pnhe")

[node name="Sprite2D" type="Sprite2D" parent="Spot2"]
scale = Vector2(0.33, 0.33)

[node name="Spot3" type="Area2D" parent="."]
position = Vector2(27, 26)
scale = Vector2(3, 3)

[node name="Spot3Collider" type="CollisionShape2D" parent="Spot3"]
shape = SubResource("RectangleShape2D_2pnhe")

[node name="Sprite2D" type="Sprite2D" parent="Spot3"]
scale = Vector2(0.33, 0.33)

[node name="Spot4" type="Area2D" parent="."]
position = Vector2(152, 26)
scale = Vector2(3, 3)

[node name="Spot4Collider" type="CollisionShape2D" parent="Spot4"]
shape = SubResource("RectangleShape2D_2pnhe")

[node name="Sprite2D" type="Sprite2D" parent="Spot4"]
scale = Vector2(0.33, 0.33)
